--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>7idLandingPage</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon_16.png">
       <!-- FontAwesome -->
   <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
   <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
