refactor: improve code formatting and readability in app.ts and index.html
- Reformatted imports and object properties for consistency in app.ts
- Added smooth scrolling functionality in ngOnInit
- Updated HTML structure and added 'scroll-smooth' class to the <html> tag in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,20 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>7idLandingPage</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon_16.png">
-      <!-- FontAwesome -->
-  <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
-  <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
-</head>
-<body>
-  <app-root></app-root>
-  <script src="https://kit.fontawesome.com/cb0353dbc0.js" crossorigin="anonymous"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+  <head>
+    <meta charset="utf-8" />
+    <title>7idLandingPage</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon_16.png" />
+    <!-- FontAwesome -->
+    <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
+    <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script
+      src="https://kit.fontawesome.com/cb0353dbc0.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
