--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,101 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="es" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
-    <title>7idLandingPage</title>
+    <title>7 Ideas - Soluciones Digitales y Desarrollo de Software</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="7 Ideas convierte tus ideas en soluciones digitales. Desarrollo de software personalizado, aplicaciones web, mobile y gestión de proyectos con metodología ágil Scrum desde 2004."
+    />
+    <meta
+      name="keywords"
+      content="desarrollo de software, soluciones digitales, aplicaciones web, desarrollo mobile, scrum, metodología ágil, transformación digital, desarrollo personalizado"
+    />
+    <meta name="author" content="7 Ideas" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <link
+      rel="canonical"
+      href="https://franciscolarrosa96.github.io/7idLanding/"
+    />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="7 Ideas - Soluciones Digitales y Desarrollo de Software"
+    />
+    <meta
+      property="og:description"
+      content="Convertimos tus ideas en soluciones digitales de calidad. Desarrollo de software personalizado con más de 20 años de experiencia."
+    />
+    <meta
+      property="og:url"
+      content="https://franciscolarrosa96.github.io/7idLanding/"
+    />
+    <meta
+      property="og:image"
+      content="https://franciscolarrosa96.github.io/7idLanding/assets/preview7id.avif"
+    />
+    <meta property="og:image:alt" content="7 Ideas - Soluciones Digitales" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:site_name" content="7 Ideas" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="7 Ideas - Soluciones Digitales y Desarrollo de Software"
+    />
+    <meta
+      name="twitter:description"
+      content="Convertimos tus ideas en soluciones digitales de calidad. Desarrollo de software personalizado con más de 20 años de experiencia."
+    />
+    <meta
+      name="twitter:image"
+      content="https://franciscolarrosa96.github.io/7idLanding/assets/preview7id.avif"
+    />
+
+    <!-- Additional Meta Tags -->
+    <meta name="theme-color" content="#ff1f43" />
+    <meta name="msapplication-TileColor" content="#ff1f43" />
+
     <link rel="icon" type="image/x-icon" href="assets/favicon_16.png" />
+
     <!-- FontAwesome -->
     <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
     <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "7 Ideas",
+        "url": "https://franciscolarrosa96.github.io/7idLanding/",
+        "logo": "https://franciscolarrosa96.github.io/7idLanding/assets/7id_logo_blanco.svg",
+        "description": "Desarrollo de soluciones digitales y software personalizado desde 2004",
+        "foundingDate": "2004",
+        "sameAs": [],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Ventas",
+          "availableLanguage": ["Spanish"]
+        },
+        "areaServed": "AR",
+        "knowsAbout": [
+          "Desarrollo de Software",
+          "Aplicaciones Web",
+          "Desarrollo Mobile",
+          "Metodología Scrum",
+          "Transformación Digital"
+        ]
+      }
+    </script>
   </head>
   <body>
     <app-root></app-root>
